--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Title</title>
 </head>
-<body>
+<body style="background-color: white">
 <div id="app"></div>
 </body>
 </html>
